@@ -97,10 +97,10 @@
                   <table width="100%" style="color: #333;" border="0">
                     <tr>
                       <td i18n:translate="">anchor name</td>
-                      <td><input class="store" type="text" id="kupu-index-name" /></td>
+                      <td><a class="rollover" href="#" i18n:translate="">anchor name<span class="tooltip">Enter the name of an anchor. Do not use spaces, special characters, or any punctuation other than a hyphen or underscore.</span></a></td>
                     </tr>
                     <tr>
-                      <td width="30%" i18n:translate="">index title</td>
+                      <td><a class="rollover" href="#" i18n:translate="">index title<span class="tooltip">If this anchor is also an index item, enter a title for the link in the Indexer.</span></a></td>
                       <td><input class="store" type="text" id="kupu-index-title" /></td>
                     </tr>
                   </table>
@@ -243,11 +243,11 @@
                 <td>
                   <table width="100%" style="color: #333;" border="0">
                     <tr>
-                      <td>title</td>
+                      <td><a class="rollover" href="#" i18n:translate="">title<span class="tooltip">Enter the text of the tooltip that will appear when a user hovers over the element with the cursor.</span></a></td>
                       <td><input class="store" type="text" id="kupu-abbr-title" /></td>
                     </tr>
                     <tr id="kupu-abbr-radiorow">
-                      <td>type</td>
+                      <td><a class="rollover" href="#" i18n:translate="">type<span class="tooltip">Choose the kind of html tag (abbr or acronym).</span></a></td>
                       <td>
                         <input type="radio" id="kupu-abbr-type-abbr" 
                               name="kupu-abbr-type" value="abbr" checked="checked" /> 
